--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,58 @@
 <resources>
     <string name="app_name">Board Games Galore</string>
+    <string name="add_edit_game_game_update_failed_title">Game Update Failed</string>
+    <string name="add_edit_game_game_update_failed_message">There was an issue with updating the game. Please make sure the game exists, check the game data, and try again.</string>
+    <string name="add_edit_game_field_name">Name</string>
+    <string name="add_edit_game_field_maker">Maker</string>
+    <string name="add_edit_game_field_rating">Rating</string>
+    <string name="add_edit_game_field_weight">Weight</string>
+    <string name="add_edit_game_field_number_players">Number Of Players (e.g. 1-4 or 2)</string>
+    <string name="add_edit_game_field_play_time">Play Time (Min) (e.g. 60-120 or 30)</string>
+    <string name="add_edit_game_field_description">Game Description</string>
+    <string name="add_edit_game_game_icon_uploaded">Game Icon Upload</string>
+    <string name="add_edit_game_upload_icon">Upload Icon</string>
+    <string name="add_edit_game_no_game_name_title">No Game Name</string>
+    <string name="add_edit_game_no_game_name_message">The game needs a name before taking a picture.</string>
+    <string name="add_edit_game_take_picture">Take Picture</string>
+    <string name="add_edit_game_no_permission">No Permission</string>
+    <string name="add_edit_game_open_settings">Open Settings</string>
+    <string name="add_edit_game_permission_request">Permission request</string>
+    <string name="ok">Ok</string>
+    <string name="add_edit_game_name_not_correct_title">Name Not Correct</string>
+    <string name="add_edit_game_name_not_correct_message">The game needs a correct name.</string>
+    <string name="add_edit_game_maker_not_correct_title">Maker Not Correct</string>
+    <string name="add_edit_game_maker_not_correct_message">The game needs a correct maker.</string>
+    <string name="add_edit_game_rating_not_correct_title">Rating Not Correct</string>
+    <string name="add_edit_game_rating_not_correct_message">The game needs a correct rating.</string>
+    <string name="add_edit_game_rating_parsing_not_correct_title">Rating Not Correct</string>
+    <string name="add_edit_game_rating_parsing_not_correct_message">Please check the rating and try again.</string>
+    <string name="add_edit_game_weight_not_correct_title">Weight Not Correct</string>
+    <string name="add_edit_game_weight_not_correct_message">The game needs a correct weight.</string>
+    <string name="add_edit_game_weight_parsing_not_correct_title">Weight Not Correct</string>
+    <string name="add_edit_game_weight_parsing_not_correct_message">Please check the weight and try again.</string>
+    <string name="add_edit_game_number_of_players_not_correct_title">Number Of Players Not Correct</string>
+    <string name="add_edit_game_number_of_players_not_correct_message">The game needs a number of players</string>
+    <string name="add_edit_game_number_of_players_parsing_not_correct_title">Number Of Players Not Correct</string>
+    <string name="add_edit_game_number_of_players_parsing_not_correct_message">Please check the number of players. It needs to use the format X-Y where X is the least amount of players and Y is the most amount of players (e.g. 1-4).</string>
+    <string name="add_edit_game_play_time_not_correct_title">Play Time Not Correct</string>
+    <string name="add_edit_game_play_time_not_correct_message">The game needs an amount of play time.</string>
+    <string name="add_edit_game_play_time_parsing_not_correct_title">Play Time Not Correct</string>
+    <string name="add_edit_game_play_time_parsing_not_correct_message">Please check the play time. It needs to use the format X-Y where X it the shortest play time in minutes and Y is the longest play time in minutes (e.g. 60-120)</string>
+    <string name="add_edit_game_description_not_correct_title">Description Not Correct</string>
+    <string name="add_edit_game_description_not_correct_message">The game needs a description.</string>
+    <string name="search">Search</string>
+    <string name="game_selection_please_add_game">No Games In Database. \nPlease add a game.</string>
+    <string name="by_label">By: %1$s</string>
+    <string name="camera_permission_rational_text">This permission is important for this app. Please grant the permission.</string>
+    <string name="camera_permission_request_title">Permission request</string>
+    <string name="take_picture_permission_rational_text">You need to take a picture, so I have to ask for permission.</string>
+    <string name="open_settings_text">Open Settings</string>
+    <string name="add_edit_game_top_bar_title">Add Game</string>
+    <string name="save">Save</string>
+    <string name="error">Error</string>
+    <string name="error_message">Error Message</string>
+    <string name="cropper_preparing_image">Preparing Image</string>
+    <string name="cropper_saving_result">Saving Result</string>
+    <string name="cropper_error_while_opening_the_image">Error while opening the image!</string>
+    <string name="cropper_error_while_saving_the_image">Error while saving the image!</string>
 </resources>
