- Changed the icon for the navigation tabs to have outlines instead of filled. - Fixed the back press on the game info screens. - Started fixing the Game Info screen. - Added a top bar for the Game Info screens. - Added a method to the GameDetailsViewModel to retrieve the game by id. - Put hardcoded strings in the strings.xml file.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,4 +59,6 @@
     <string name="add_edit_game_no_bitmap_message">There was an issue retrieving the bitmap.</string>
     <string name="add_edit_game_no_image_specified_title">No Image Was Specified</string>
     <string name="add_edit_game_no_image_specified_message">The location of the image was not specified.</string>
+    <string name="details_top_bar_go_back_text">Go back to game selection.</string>
+    <string name="game_detail_game_not_available">Game Not Available</string>
 </resources>
